--- a/webroot/css/StyleSheet.css
+++ b/webroot/css/StyleSheet.css
@@ -6,7 +6,7 @@
   background-position-y: 50px;
   background-size: 50%;
   background-repeat: repeat-x;
-  background-color: #bbff83;
+  background-color: white; /* #bbff83;*/
 }
 
 /* #region Navigation bar */
@@ -227,14 +227,14 @@ footer {
 /* #region Sidebar */
 
 .sidebar {
-  background-color: #bbff83;
+  background-color: white; /* #bbff83;*/
 
   position: absolute;
   left: 0;
   height: 90%;
 
   margin-top: 30px;
-  padding: 40px 20px;
+  padding: 40px 10px;
 }
 
 .sidebar h3 {
@@ -305,7 +305,6 @@ footer {
 }
 
 .sidebar-link:hover, .sidebar-link a:hover, .sidebar-dropdown-button:hover {
-  background-color: whitesmoke;
   transition-duration: 0.5s;
   color: black;
   text-decoration: none;
