--- a/webroot/css/StyleSheet.css
+++ b/webroot/css/StyleSheet.css
@@ -4,9 +4,9 @@
   width: 100%;
   height: 100vh;
   background-position-y: 50px;
-  background-size: 50%;
+  background-size: 70%;
   background-repeat: repeat-x;
-  background-color: white; /* #bbff83;*/
+  background-color: #bbff83;
 }
 
 /* #region Navigation bar */
@@ -227,7 +227,7 @@ footer {
 /* #region Sidebar */
 
 .sidebar {
-  background-color: white; /* #bbff83;*/
+  background-color:#bbff83;
 
   position: absolute;
   left: 0;
@@ -378,7 +378,7 @@ footer {
 /* #endregion */
 
 .homepage-section {
-  margin-top: 50px;
+  /* margin-top: 50px; */
 }
 
 .section-title {
@@ -478,3 +478,21 @@ footer {
 }
 
 /* #endregion */
+
+/* #region Contact */
+.contact-list {
+  margin-top: 100px;
+  position: relative;
+  left: 10%;
+  list-style: none;
+  font-size: 20px;
+}
+
+.contact-list span {
+  margin-right: 20px;
+}
+/* #endregion */
+
+.margin-top-100 {
+  margin-top: 100px;
+}
