--- a/webroot/css/StyleSheet.css
+++ b/webroot/css/StyleSheet.css
@@ -481,9 +481,6 @@ footer {
 
 /* #region Contact */
 .contact-list {
-  margin-top: 100px;
-  position: relative;
-  left: 10%;
   list-style: none;
   font-size: 20px;
 }
@@ -491,6 +488,31 @@ footer {
 .contact-list span {
   margin-right: 20px;
 }
+
+.contact {
+  background-image: url('../img/zahrada1.10.jpg');
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.contact-panel {
+  background-color: #ffffffbb;
+  color: black;
+  font-family: Arial, Helvetica, sans-serif;
+  height: 50%;
+  width: 50%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 /* #endregion */
 
 .margin-top-100 {
