--- a/webroot/css/StyleSheet.css
+++ b/webroot/css/StyleSheet.css
@@ -493,17 +493,17 @@ footer {
 
 /* #endregion */
 
-/* #region Contact */
-.contact-list {
+/* #region Info View */
+.info-panel-list {
   list-style: none;
   font-size: 20px;
 }
 
-.contact-list span {
+.info-panel-list span {
   margin-right: 20px;
 }
 
-.contact {
+.info-view {
   background-image: url('../img/zahrada1.10.jpg');
   width: 100%;
   height: 100%;
@@ -514,17 +514,15 @@ footer {
   justify-content: center;
 }
 
-.contact h1 {
+.info-view h1 {
   color:rgb(104, 62, 0);
   margin-bottom: 15px;
 }
 
-.contact-panel {
+.info-panel {
   background-color: #ffffffbb;
   color: black;
   font-family: Arial, Helvetica, sans-serif;
-  height: 50%;
-  width: 50%;
   padding: 25px;
 
   display: flex;
