--- a/webroot/css/StyleSheet.css
+++ b/webroot/css/StyleSheet.css
@@ -537,11 +537,23 @@ footer {
 
 /* #endregion */
 
-/* #region Text Page */
+/* #region Blog */
 
-.text-page {
-  margin-top: 100px;
-  padding: 25px;
+.blog-header {
+  background-image: url('../img/zahrada1.10.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+  height: 300px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.blog-header h1 {
+  color: green;
+  
 }
 
 /* #endregion */
